--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="shortcut icon" type="image/x-icon"
+    href="https://img.icons8.com/?size=100&id=J3nZHWgT1e7m&format=png&color=000000">
   <link rel="stylesheet" href="./src/App.css" />
   <title>Shubz-Portfolio</title>
 </head>
